tests/core/errors/test_command_report_data/TARGETS.fixture
load(":defs.bzl", "fail_build")

genrule(
    name = "build_success",
    outs = ["out.txt"],
    cmd = "echo success > $@",
)

fail_build(name = "fail1")
fail_build(name = "fail2")
